# Dining-Philosophers

./: .gitignore
C++/Algorithm/NoSemaphore/: CMakeLists.txt
C++/Algorithm/NoSemaphore/DiningPhilosophers/: main.cpp
C++/Algorithm/Semaphore/: CMakeLists.txt
C++/Algorithm/Semaphore/DiningPhilosophers/: CMakeLists.txt  main.cpp
C++/Qt/: CMakeLists.txt  CMakePresets.json  vcpkg.json
C++/Qt/DiningPhilosophers/: CMakeLists.txt  main.cpp
C++/Qt/Test/: CMakeLists.txt
C++/Qt/Test/unit_test/: CMakeLists.txt  example_test.cpp
Python/: dining_phil.py
Rust/dining_philosophers/: Cargo.toml
Rust/dining_philosophers/src/: dining_philosophers.rs
